# tic-tac-toe

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile
.github/workflows/: ci.yml
src/: board.hpp  game.hpp  main.cpp  player.hpp
tests/: CMakeLists.txt  board_test.cpp  integration_test.py
